[gd_scene load_steps=2 format=3 uid="uid://dlkn6fpnm17x4"]

[ext_resource type="Script" path="res://scripts/EquipmentDisplay.gd" id="1_4eedu"]

[node name="EquipmentDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4eedu")

[node name="PlayerGold" type="Label" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 71.0
offset_right = 189.0
offset_bottom = 97.0
text = "500"

[node name="LevelSelect" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 118.0
offset_right = 231.063
offset_bottom = 158.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="MaxButton" type="Button" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 122.0
offset_right = 282.0
offset_bottom = 153.0
text = "Max"

[node name="Validate" type="Button" parent="."]
layout_mode = 0
offset_left = 629.0
offset_top = 330.0
offset_right = 689.0
offset_bottom = 361.0
text = "Create"

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 168.0
offset_right = 192.0
offset_bottom = 194.0
text = "000"

[node name="preview" type="Label" parent="."]
layout_mode = 0
offset_left = 145.0
offset_top = 221.0
offset_right = 320.0
offset_bottom = 247.0
text = "Attack:+0 Mana:+0 Life:+0"
